[package]
name = "derbyjson"
version = "0.0.2"
authors = ["Arcady Goldmints-Orlov <crzwdjk@gmail.com>"]
repository = "https://github.com/crzwdjk/derbyjson"
license-file = "LICENSE"
description = "A package to serialize to and deserialize from the DerbyJSON format for roller derby data"

[dependencies]
serde = "^0.9"
serde_json = "^0.9.3"
serde_derive = "^0.9"
