[package]
name = "derbyjson"
version = "0.0.3"
authors = ["Arcady Goldmints-Orlov <crzwdjk@gmail.com>"]
repository = "https://github.com/crzwdjk/derbyjson"
license-file = "LICENSE"
description = "A package to serialize to and deserialize from the DerbyJSON format for roller derby data"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
